# Kem

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  estructura.txt  notasMiAbstraccion.txt
cli/: CMakeLists.txt  main.cpp
doc/: kem_estructure.md  kem_grammar.md  notasMiAbstraccion.txt
doc/pruebasAprendizaje/: correr_llvm.txt  holaMundo.ll
examples/: fibonacci.kem
include/kem/: AST.hpp  ErrorHandler.hpp  LangConfig.hpp  Lexer.hpp  Parser.hpp  Token.hpp
langs/: english.json  espanol.json
pruebasAprendizaje/: holaMundo.ll
src/: AST.cpp  ErrorHandler.cpp  LangConfig.cpp  Lexer.cpp  Parser.cpp  Token.cpp
templates/: detalles_info.html  hola_Mundo.html  kem.html
tests/: CMakeLists.txt
tests/lexer/: test_tokens.cpp
tests/parser/: test_parser.cpp
